--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
             </div>
         </header>
         <main>
+            <button id="startbtn">Start</button>
             <div class="container">
                 <div class="time">
-                    <button id="startbtn">Start</button>
                     <div>
                         <h3>Time</h3>
                         <p id="timer"></p>
@@ -20,6 +20,10 @@
                 </div>
                 <div class="sub-container" id="game">
                 </div>
+            </div>
+            <div class="finish">
+                <p>Finsh</p>
+                <button>restart</button>
             </div>
         </main> 
         <footer></footer>
