--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="finish">
                 <p>Finsh</p>
-                <button>restart</button>
+                <button>Re-Play</button>
             </div>
         </main> 
         <footer></footer>
