--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
                 </div>
             </div>
             <div class="finish">
-                <p>Finsh</p>
-                <button>Re-Play</button>
+                <div>
+                    <p>Finish</p>
+                    <button id="replay">Re-Play</button>
+                </div>
             </div>
         </main> 
         <footer></footer>
         <script src="./script/script.js"></script>
-
     </body>
 
 </html>
